# jar

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  GENESIS.md  JarBook.lean  Makefile  README.md  deny.toml  lakefile.lean  trace-block179-svc4050946909.txt
.github/cache/: genesis.json
.github/workflows/: book.yml  ci-grey.yml  ci.yml  docs.yml  genesis-merge.yml  genesis-pr-opened.yml  genesis-review.yml
Genesis/: Design.lean  Json.lean  Scoring.lean  State.lean  Types.lean
Genesis/Cli/: CheckMerge.lean  Finalize.lean  SelectTargets.lean  Validate.lean
Jar/: Accumulation.lean  Codec.lean  Erasure.lean  Merkle.lean  PVM.lean  Services.lean  State.lean  StateSerialization.lean
Jar/PVM/: Instructions.lean  Interpreter.lean
Jar/Test/: AccumulateJson.lean  BlockTest.lean  BlockTestMain.lean  CodecTest.lean  CodecTestMain.lean  ErasureTest.lean
JarBook/: Accumulation.lean  Codec.lean  Consensus.lean  Crypto.lean  Erasure.lean  Merkle.lean  Notation.lean  PVM.lean  Services.lean  State.lean
crates/grey-bench/: Cargo.toml
crates/grey-rpc/: Cargo.toml
crates/grey-state/: Cargo.toml
docs/: pvm-sbrk.md  recompiler-debugging.md
grey/: AGENTS.md  README.md
grey/crates/grey-transpiler/: Cargo.toml
grey/crates/grey-transpiler/src/: assembler.rs  emitter.rs  lib.rs  linker.rs  riscv.rs
spec/: Genesis.lean  Jar.lean  Makefile  lakefile.lean
tools/jar-genesis/: Cargo.toml
tools/jar-genesis/src/: lib.rs  main.rs  queue.rs  review.rs
tools/jar-genesis/src/workflow/: merge.rs
tools/jar-genesis/tests/: lean_integration.rs  replay_integration.rs
(+728 files in other folders)
