[package]
name = "jar-genesis"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "jar_genesis"
path = "src/lib.rs"

[[bin]]
name = "jar-genesis"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
